apps/cillium-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: srt-base
  annotations:
    io.cilium/global-service: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    name: srt-base
