apps/hello-world-ingress.yaml
# https://www.bsmithio.com/post/baremetal-k8s/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: ingress-nginx
  annotations:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - default.hq.solidrust.net
      # secretName refers to the secret containing the tls certificate
      # if it does not exist, ingress-nginx will use a self-signed certificate
      secretName: default.hq.solidrust.net-tls
  rules:
  - host: default.hq.solidrust.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world
            port:
              number: 80
